INF-1400 #comment Dec 2012 drop
git-svn-id: https://ikanow.jira.com/svn/INF/branches/infinit.e-published-to-github@6397 e6edf6fb-f266-4316-afb4-e53d95876a76