@@ -16,18 +16,27 @@
 package com.ikanow.infinit.e.data_model.store.config.source;
 
 import java.io.UnsupportedEncodingException;
+import java.lang.reflect.Type;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
 import java.util.Date;
 import java.util.HashSet;
+import java.util.LinkedHashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.Set;
 import java.util.regex.Pattern;
 
+import org.apache.commons.codec.binary.Base64;
 import org.bson.types.ObjectId;
 
-import sun.misc.BASE64Encoder;
-
+import com.google.gson.GsonBuilder;
+import com.google.gson.JsonDeserializationContext;
+import com.google.gson.JsonDeserializer;
+import com.google.gson.JsonElement;
+import com.google.gson.JsonParseException;
+import com.google.gson.JsonSerializationContext;
+import com.google.gson.JsonSerializer;
 import com.google.gson.reflect.TypeToken;
 import com.ikanow.infinit.e.data_model.store.BaseDbPojo;
 import com.ikanow.infinit.e.data_model.store.social.authentication.AuthenticationPojo;
@@ -133,6 +142,9 @@ public class SourcePojo extends BaseDbPojo {
 	}
 	private SourceSearchIndexFilter searchIndexFilter = null; // Optional, allows the source builder to configure which fields are searchable
 	final public static String searchIndexFilter_ = "searchIndexFilter";
+	
+	private LinkedHashMap<String, String> extractorOptions = null; // Optional, overrides the per-extractor configuration options, where permissible
+	final public static String extractorOptions_ = "extractorOptions";
 	
 	// Gets and sets
 	
@@ -464,7 +476,7 @@ public class SourcePojo extends BaseDbPojo {
 		// Create MessageDigest and set shah256Hash value
 		MessageDigest md = MessageDigest.getInstance("SHA-256");
 		md.update(sb.toString().getBytes("UTF-8"));		
-		shah256Hash = (new BASE64Encoder()).encode(md.digest());	
+		shah256Hash = Base64.encodeBase64String(md.digest());	
 	}
 	public Integer getSearchCycle_secs() {
 		return searchCycle_secs;
@@ -543,6 +555,56 @@ public class SourcePojo extends BaseDbPojo {
 			}
 		} // (end if search filter specified)
 	}//(end initialize search filter)
-
+	public void setExtractorOptions(LinkedHashMap<String, String> extractorOptions) {
+		this.extractorOptions = extractorOptions;
+	}
+	public LinkedHashMap<String, String> getExtractorOptions() {
+		return extractorOptions;
+	}
 	//TESTED
+
+	///////////////////////////////////////////////////////////////////
+	
+	// Serialization/deserialization utils:
+	// (Ugh needed because extractorOptions keys can contain "."s)
+	
+	public GsonBuilder extendBuilder(GsonBuilder gp) {
+		return gp.registerTypeAdapter(SourcePojo.class, new SourcePojoDeserializer()).
+				registerTypeAdapter(SourcePojo.class, new SourcePojoSerializer());
+	}
+	
+	protected static class SourcePojoDeserializer implements JsonDeserializer<SourcePojo> 
+	{
+		@Override
+		public SourcePojo deserialize(JsonElement json, Type typeOfT, JsonDeserializationContext context) throws JsonParseException
+		{
+			SourcePojo src = BaseDbPojo.getDefaultBuilder().create().fromJson(json, SourcePojo.class);  
+			if (null != src.extractorOptions) {
+				LinkedHashMap<String, String> transformed = new LinkedHashMap<String, String>();
+				for (Map.Entry<String, String> entry: src.extractorOptions.entrySet()) {
+					transformed.put(entry.getKey().replace("%2e", "."), entry.getValue());
+				}
+				src.extractorOptions = transformed;
+			}
+			return src;
+		}//TESTED (with and without extractor options)
+	}
+	protected static class SourcePojoSerializer implements JsonSerializer<SourcePojo> 
+	{
+		@Override
+		public JsonElement serialize(SourcePojo src, Type typeOfT, JsonSerializationContext context) throws JsonParseException
+		{
+			if (null != src.extractorOptions) {
+				LinkedHashMap<String, String> transformed = new LinkedHashMap<String, String>();
+				for (Map.Entry<String, String> entry: src.extractorOptions.entrySet()) {
+					transformed.put(entry.getKey().replace(".", "%2e"), entry.getValue());
+				}
+				src.extractorOptions = transformed;
+			}
+			// GSON transformation:
+			JsonElement je = SourcePojo.getDefaultBuilder().create().toJsonTree(src, typeOfT);
+			
+			return je;
+		}//TESTED (with and without extractor options)
+	}	
 }
